[project]
name = "travel-planner"
version = "0.1.0"
description = "Standalone Linux travel planner"
requires-python = ">=3.12"

[project.scripts]
travel-planner = "travel_planner.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["travel_planner"]

[tool.setuptools.package-data]
travel_planner = ["map.html"]
